# compclasses

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  setup.cfg  sitemap.xml
.github/workflows/: broken-links.yaml  code-check.yml  deploy-docs.yaml  pre-commit-update.yaml  pull-request.yaml  testing.yml
api/compclass/: index.html
api/compclassmeta/: index.html
api/delegatee/: index.html
api/property_from_delegator/: index.html
compclasses/: __init__.py  _core.py  _decorator.py  _delegatee.py  _logging.py  _meta.py  _utils.py  compclass.py  metaclass.py
composition/: index.html
contribute/: index.html
docs/: CONTRIBUTING.md  composition.md  contribute.md  contribution.md  index.md  inspiration.md
docs/api/: compclass.md  compclassmeta.md  delegatee.md  property_from_delegator.md
docs/user_guide/: beyond_basics.md  getting_started.md  integration.md  mypy.md
inspiration/: index.html
search/: search_index.json
tests/: _decorator_test.py  _meta_test.py  compclass_test.py  conftest.py  delegatee_test.py  metaclass_test.py  partition_test.py  property_from_delegator_test.py  verbose_test.py
tests/_core/: generate_properties_test.py  property_from_delegator_test.py
tests/_delegatee/: delegatee_test.py  partition_test.py
user_guide/beyond_basics/: index.html
user_guide/getting_started/: index.html
user_guide/integration/: index.html
user_guide/mypy/: index.html
