[metadata]
name = compclasses
version = 0.1.0
author = Francesco Bruzzesi
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = True

[options.extras_require]
dev =
    black==22.3.0
    interrogate==1.5.0
    pre-commit==2.15.0
    mkdocs==1.3.1
    mkdocs-material==8.3.9
    mkdocstrings==0.18.1
