[metadata]
name = compclasses
version = 0.1.0
author = Francesco Bruzzesi
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = True

[options.extras_require]
dev =
    black==22.12.0
    interrogate==1.5.0
    isort==5.10.1
    pre-commit==2.21.0
    pytest==7.2.0

doc =
    mkdocs==1.4.2
    mkdocs-material==9.0.0
    mkdocstrings==0.19.1
